# register-work

./: Jenkinsfile  README.md  jenkinsfile  pyproject.toml  script.py  verificar_feriados.py
.github/workflows/: bater_ponto.yml
scripts/: script.py
