[tool.poetry]
name = "point-record"
version = "0.1.0"
description = "registration work"
authors = ["David Alexandre Fernandes <david.dfernandes@mercadolivre.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "*"
webdriver-manager = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
